10153
Righto, one more spot sorted.
```scala
% cat sandbox/test.scala
class A {
  def booboo = bong + booble + bippity - bazingo
  Tuple3(wizzle, wuzzle, wozzle)
  def f(x: Any) = x match {
    case Shmist(a, b, c) => a :: b :: c :: Nil
    case Goop(a, b, c)   => s"$a $b $c $d $e"
  }
}

% qbin/scalac sandbox/test.scala
sandbox/test.scala:2: error: not found: value bong
  def booboo = bong + booble + bippity - bazingo
               ^
sandbox/test.scala:2: error: not found: value booble
  def booboo = bong + booble + bippity - bazingo
                      ^
sandbox/test.scala:2: error: not found: value bippity
  def booboo = bong + booble + bippity - bazingo
                               ^
sandbox/test.scala:2: error: not found: value bazingo
  def booboo = bong + booble + bippity - bazingo
                                         ^
sandbox/test.scala:3: error: not found: value wizzle
  Tuple3(wizzle, wuzzle, wozzle)
         ^
sandbox/test.scala:3: error: not found: value wuzzle
  Tuple3(wizzle, wuzzle, wozzle)
                 ^
sandbox/test.scala:3: error: not found: value wozzle
  Tuple3(wizzle, wuzzle, wozzle)
                         ^
sandbox/test.scala:5: error: not found: value Shmist
    case Shmist(a, b, c) => a :: b :: c :: Nil
         ^
sandbox/test.scala:6: error: not found: value Goop
    case Goop(a, b, c)   => s"$a $b $c $d $e"
         ^
sandbox/test.scala:6: error: not found: value d
    case Goop(a, b, c)   => s"$a $b $c $d $e"
                                        ^
sandbox/test.scala:6: error: not found: value e
    case Goop(a, b, c)   => s"$a $b $c $d $e"
                                           ^
11 errors found
```
